parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> bloc
Rule 1     bloc -> statement bloc
Rule 2     bloc -> statement
Rule 3     mbloc -> LACCO mbloc RACCO
Rule 4     mbloc -> LACCO statement RACCO
Rule 5     statement -> IF expression mbloc ELSE mbloc
Rule 6     statement -> IF expression mbloc
Rule 7     statement -> NAME EQUALS expression SEMICOLON
Rule 8     statement -> expression SEMICOLON
Rule 9     expression -> expression PLUS expression
Rule 10    expression -> expression MINUS expression
Rule 11    expression -> expression TIMES expression
Rule 12    expression -> expression DIVIDE expression
Rule 13    expression -> expression EQUALITY expression
Rule 14    expression -> expression NON_EQUALITY expression
Rule 15    expression -> expression OR expression
Rule 16    expression -> expression AND expression
Rule 17    expression -> MINUS expression
Rule 18    expression -> LPAREN expression RPAREN
Rule 19    expression -> NUMBER
Rule 20    expression -> STRING
Rule 21    expression -> NAME

Terminals, with rules where they appear

AND                  : 16
DIVIDE               : 12
ELSE                 : 5
EQUALITY             : 13
EQUALS               : 7
IF                   : 5 6
LACCO                : 3 4
LPAREN               : 18
MINUS                : 10 17
NAME                 : 7 21
NON_EQUALITY         : 14
NUMBER               : 19
OR                   : 15
PLUS                 : 9
RACCO                : 3 4
RPAREN               : 18
SEMICOLON            : 7 8
STRING               : 20
TIMES                : 11
error                : 

Nonterminals, with rules where they appear

bloc                 : 1 0
expression           : 5 6 7 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 18
mbloc                : 3 5 5 6
statement            : 1 2 4

Parsing method: LALR

state 0

    (0) S' -> . bloc
    (1) bloc -> . statement bloc
    (2) bloc -> . statement
    (5) statement -> . IF expression mbloc ELSE mbloc
    (6) statement -> . IF expression mbloc
    (7) statement -> . NAME EQUALS expression SEMICOLON
    (8) statement -> . expression SEMICOLON
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUALITY expression
    (14) expression -> . expression NON_EQUALITY expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . STRING
    (21) expression -> . NAME

    IF              shift and go to state 6
    NAME            shift and go to state 8
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 2
    STRING          shift and go to state 4

    expression                     shift and go to state 1
    bloc                           shift and go to state 7
    statement                      shift and go to state 3

state 1

    (8) statement -> expression . SEMICOLON
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . EQUALITY expression
    (14) expression -> expression . NON_EQUALITY expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . AND expression

    SEMICOLON       shift and go to state 18
    PLUS            shift and go to state 13
    MINUS           shift and go to state 16
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 10
    EQUALITY        shift and go to state 11
    NON_EQUALITY    shift and go to state 15
    OR              shift and go to state 12
    AND             shift and go to state 17


state 2

    (19) expression -> NUMBER .

    PLUS            reduce using rule 19 (expression -> NUMBER .)
    MINUS           reduce using rule 19 (expression -> NUMBER .)
    TIMES           reduce using rule 19 (expression -> NUMBER .)
    DIVIDE          reduce using rule 19 (expression -> NUMBER .)
    EQUALITY        reduce using rule 19 (expression -> NUMBER .)
    NON_EQUALITY    reduce using rule 19 (expression -> NUMBER .)
    OR              reduce using rule 19 (expression -> NUMBER .)
    AND             reduce using rule 19 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 19 (expression -> NUMBER .)
    RPAREN          reduce using rule 19 (expression -> NUMBER .)
    LACCO           reduce using rule 19 (expression -> NUMBER .)


state 3

    (1) bloc -> statement . bloc
    (2) bloc -> statement .
    (1) bloc -> . statement bloc
    (2) bloc -> . statement
    (5) statement -> . IF expression mbloc ELSE mbloc
    (6) statement -> . IF expression mbloc
    (7) statement -> . NAME EQUALS expression SEMICOLON
    (8) statement -> . expression SEMICOLON
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUALITY expression
    (14) expression -> . expression NON_EQUALITY expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . STRING
    (21) expression -> . NAME

    $end            reduce using rule 2 (bloc -> statement .)
    IF              shift and go to state 6
    NAME            shift and go to state 8
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 2
    STRING          shift and go to state 4

    expression                     shift and go to state 1
    bloc                           shift and go to state 19
    statement                      shift and go to state 3

state 4

    (20) expression -> STRING .

    PLUS            reduce using rule 20 (expression -> STRING .)
    MINUS           reduce using rule 20 (expression -> STRING .)
    TIMES           reduce using rule 20 (expression -> STRING .)
    DIVIDE          reduce using rule 20 (expression -> STRING .)
    EQUALITY        reduce using rule 20 (expression -> STRING .)
    NON_EQUALITY    reduce using rule 20 (expression -> STRING .)
    OR              reduce using rule 20 (expression -> STRING .)
    AND             reduce using rule 20 (expression -> STRING .)
    SEMICOLON       reduce using rule 20 (expression -> STRING .)
    RPAREN          reduce using rule 20 (expression -> STRING .)
    LACCO           reduce using rule 20 (expression -> STRING .)


state 5

    (18) expression -> LPAREN . expression RPAREN
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUALITY expression
    (14) expression -> . expression NON_EQUALITY expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . STRING
    (21) expression -> . NAME

    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 2
    STRING          shift and go to state 4
    NAME            shift and go to state 21

    expression                     shift and go to state 20

state 6

    (5) statement -> IF . expression mbloc ELSE mbloc
    (6) statement -> IF . expression mbloc
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUALITY expression
    (14) expression -> . expression NON_EQUALITY expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . STRING
    (21) expression -> . NAME

    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 2
    STRING          shift and go to state 4
    NAME            shift and go to state 21

    expression                     shift and go to state 22

state 7

    (0) S' -> bloc .



state 8

    (7) statement -> NAME . EQUALS expression SEMICOLON
    (21) expression -> NAME .

    EQUALS          shift and go to state 23
    SEMICOLON       reduce using rule 21 (expression -> NAME .)
    PLUS            reduce using rule 21 (expression -> NAME .)
    MINUS           reduce using rule 21 (expression -> NAME .)
    TIMES           reduce using rule 21 (expression -> NAME .)
    DIVIDE          reduce using rule 21 (expression -> NAME .)
    EQUALITY        reduce using rule 21 (expression -> NAME .)
    NON_EQUALITY    reduce using rule 21 (expression -> NAME .)
    OR              reduce using rule 21 (expression -> NAME .)
    AND             reduce using rule 21 (expression -> NAME .)


state 9

    (17) expression -> MINUS . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUALITY expression
    (14) expression -> . expression NON_EQUALITY expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . STRING
    (21) expression -> . NAME

    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 2
    STRING          shift and go to state 4
    NAME            shift and go to state 21

    expression                     shift and go to state 24

state 10

    (12) expression -> expression DIVIDE . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUALITY expression
    (14) expression -> . expression NON_EQUALITY expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . STRING
    (21) expression -> . NAME

    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 2
    STRING          shift and go to state 4
    NAME            shift and go to state 21

    expression                     shift and go to state 25

state 11

    (13) expression -> expression EQUALITY . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUALITY expression
    (14) expression -> . expression NON_EQUALITY expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . STRING
    (21) expression -> . NAME

    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 2
    STRING          shift and go to state 4
    NAME            shift and go to state 21

    expression                     shift and go to state 26

state 12

    (15) expression -> expression OR . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUALITY expression
    (14) expression -> . expression NON_EQUALITY expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . STRING
    (21) expression -> . NAME

    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 2
    STRING          shift and go to state 4
    NAME            shift and go to state 21

    expression                     shift and go to state 27

state 13

    (9) expression -> expression PLUS . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUALITY expression
    (14) expression -> . expression NON_EQUALITY expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . STRING
    (21) expression -> . NAME

    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 2
    STRING          shift and go to state 4
    NAME            shift and go to state 21

    expression                     shift and go to state 28

state 14

    (11) expression -> expression TIMES . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUALITY expression
    (14) expression -> . expression NON_EQUALITY expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . STRING
    (21) expression -> . NAME

    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 2
    STRING          shift and go to state 4
    NAME            shift and go to state 21

    expression                     shift and go to state 29

state 15

    (14) expression -> expression NON_EQUALITY . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUALITY expression
    (14) expression -> . expression NON_EQUALITY expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . STRING
    (21) expression -> . NAME

    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 2
    STRING          shift and go to state 4
    NAME            shift and go to state 21

    expression                     shift and go to state 30

state 16

    (10) expression -> expression MINUS . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUALITY expression
    (14) expression -> . expression NON_EQUALITY expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . STRING
    (21) expression -> . NAME

    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 2
    STRING          shift and go to state 4
    NAME            shift and go to state 21

    expression                     shift and go to state 31

state 17

    (16) expression -> expression AND . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUALITY expression
    (14) expression -> . expression NON_EQUALITY expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . STRING
    (21) expression -> . NAME

    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 2
    STRING          shift and go to state 4
    NAME            shift and go to state 21

    expression                     shift and go to state 32

state 18

    (8) statement -> expression SEMICOLON .

    IF              reduce using rule 8 (statement -> expression SEMICOLON .)
    NAME            reduce using rule 8 (statement -> expression SEMICOLON .)
    MINUS           reduce using rule 8 (statement -> expression SEMICOLON .)
    LPAREN          reduce using rule 8 (statement -> expression SEMICOLON .)
    NUMBER          reduce using rule 8 (statement -> expression SEMICOLON .)
    STRING          reduce using rule 8 (statement -> expression SEMICOLON .)
    $end            reduce using rule 8 (statement -> expression SEMICOLON .)
    RACCO           reduce using rule 8 (statement -> expression SEMICOLON .)


state 19

    (1) bloc -> statement bloc .

    $end            reduce using rule 1 (bloc -> statement bloc .)


state 20

    (18) expression -> LPAREN expression . RPAREN
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . EQUALITY expression
    (14) expression -> expression . NON_EQUALITY expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . AND expression

    RPAREN          shift and go to state 33
    PLUS            shift and go to state 13
    MINUS           shift and go to state 16
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 10
    EQUALITY        shift and go to state 11
    NON_EQUALITY    shift and go to state 15
    OR              shift and go to state 12
    AND             shift and go to state 17


state 21

    (21) expression -> NAME .

    PLUS            reduce using rule 21 (expression -> NAME .)
    MINUS           reduce using rule 21 (expression -> NAME .)
    TIMES           reduce using rule 21 (expression -> NAME .)
    DIVIDE          reduce using rule 21 (expression -> NAME .)
    EQUALITY        reduce using rule 21 (expression -> NAME .)
    NON_EQUALITY    reduce using rule 21 (expression -> NAME .)
    OR              reduce using rule 21 (expression -> NAME .)
    AND             reduce using rule 21 (expression -> NAME .)
    SEMICOLON       reduce using rule 21 (expression -> NAME .)
    RPAREN          reduce using rule 21 (expression -> NAME .)
    LACCO           reduce using rule 21 (expression -> NAME .)


state 22

    (5) statement -> IF expression . mbloc ELSE mbloc
    (6) statement -> IF expression . mbloc
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . EQUALITY expression
    (14) expression -> expression . NON_EQUALITY expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . AND expression
    (3) mbloc -> . LACCO mbloc RACCO
    (4) mbloc -> . LACCO statement RACCO

    PLUS            shift and go to state 13
    MINUS           shift and go to state 16
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 10
    EQUALITY        shift and go to state 11
    NON_EQUALITY    shift and go to state 15
    OR              shift and go to state 12
    AND             shift and go to state 17
    LACCO           shift and go to state 35

    mbloc                          shift and go to state 34

state 23

    (7) statement -> NAME EQUALS . expression SEMICOLON
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUALITY expression
    (14) expression -> . expression NON_EQUALITY expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . NUMBER
    (20) expression -> . STRING
    (21) expression -> . NAME

    MINUS           shift and go to state 9
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 2
    STRING          shift and go to state 4
    NAME            shift and go to state 21

    expression                     shift and go to state 36

state 24

    (17) expression -> MINUS expression .
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . EQUALITY expression
    (14) expression -> expression . NON_EQUALITY expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . AND expression

    PLUS            reduce using rule 17 (expression -> MINUS expression .)
    MINUS           reduce using rule 17 (expression -> MINUS expression .)
    TIMES           reduce using rule 17 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 17 (expression -> MINUS expression .)
    EQUALITY        reduce using rule 17 (expression -> MINUS expression .)
    NON_EQUALITY    reduce using rule 17 (expression -> MINUS expression .)
    OR              reduce using rule 17 (expression -> MINUS expression .)
    AND             reduce using rule 17 (expression -> MINUS expression .)
    SEMICOLON       reduce using rule 17 (expression -> MINUS expression .)
    RPAREN          reduce using rule 17 (expression -> MINUS expression .)
    LACCO           reduce using rule 17 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 13 ]
  ! MINUS           [ shift and go to state 16 ]
  ! TIMES           [ shift and go to state 14 ]
  ! DIVIDE          [ shift and go to state 10 ]
  ! EQUALITY        [ shift and go to state 11 ]
  ! NON_EQUALITY    [ shift and go to state 15 ]
  ! OR              [ shift and go to state 12 ]
  ! AND             [ shift and go to state 17 ]


state 25

    (12) expression -> expression DIVIDE expression .
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . EQUALITY expression
    (14) expression -> expression . NON_EQUALITY expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . AND expression

    PLUS            reduce using rule 12 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 12 (expression -> expression DIVIDE expression .)
    TIMES           reduce using rule 12 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 12 (expression -> expression DIVIDE expression .)
    EQUALITY        reduce using rule 12 (expression -> expression DIVIDE expression .)
    NON_EQUALITY    reduce using rule 12 (expression -> expression DIVIDE expression .)
    OR              reduce using rule 12 (expression -> expression DIVIDE expression .)
    AND             reduce using rule 12 (expression -> expression DIVIDE expression .)
    SEMICOLON       reduce using rule 12 (expression -> expression DIVIDE expression .)
    RPAREN          reduce using rule 12 (expression -> expression DIVIDE expression .)
    LACCO           reduce using rule 12 (expression -> expression DIVIDE expression .)

  ! PLUS            [ shift and go to state 13 ]
  ! MINUS           [ shift and go to state 16 ]
  ! TIMES           [ shift and go to state 14 ]
  ! DIVIDE          [ shift and go to state 10 ]
  ! EQUALITY        [ shift and go to state 11 ]
  ! NON_EQUALITY    [ shift and go to state 15 ]
  ! OR              [ shift and go to state 12 ]
  ! AND             [ shift and go to state 17 ]


state 26

    (13) expression -> expression EQUALITY expression .
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . EQUALITY expression
    (14) expression -> expression . NON_EQUALITY expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . AND expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for EQUALITY resolved as shift
  ! shift/reduce conflict for NON_EQUALITY resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND resolved as shift
    SEMICOLON       reduce using rule 13 (expression -> expression EQUALITY expression .)
    RPAREN          reduce using rule 13 (expression -> expression EQUALITY expression .)
    LACCO           reduce using rule 13 (expression -> expression EQUALITY expression .)
    PLUS            shift and go to state 13
    MINUS           shift and go to state 16
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 10
    EQUALITY        shift and go to state 11
    NON_EQUALITY    shift and go to state 15
    OR              shift and go to state 12
    AND             shift and go to state 17

  ! PLUS            [ reduce using rule 13 (expression -> expression EQUALITY expression .) ]
  ! MINUS           [ reduce using rule 13 (expression -> expression EQUALITY expression .) ]
  ! TIMES           [ reduce using rule 13 (expression -> expression EQUALITY expression .) ]
  ! DIVIDE          [ reduce using rule 13 (expression -> expression EQUALITY expression .) ]
  ! EQUALITY        [ reduce using rule 13 (expression -> expression EQUALITY expression .) ]
  ! NON_EQUALITY    [ reduce using rule 13 (expression -> expression EQUALITY expression .) ]
  ! OR              [ reduce using rule 13 (expression -> expression EQUALITY expression .) ]
  ! AND             [ reduce using rule 13 (expression -> expression EQUALITY expression .) ]


state 27

    (15) expression -> expression OR expression .
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . EQUALITY expression
    (14) expression -> expression . NON_EQUALITY expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . AND expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for EQUALITY resolved as shift
  ! shift/reduce conflict for NON_EQUALITY resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND resolved as shift
    SEMICOLON       reduce using rule 15 (expression -> expression OR expression .)
    RPAREN          reduce using rule 15 (expression -> expression OR expression .)
    LACCO           reduce using rule 15 (expression -> expression OR expression .)
    PLUS            shift and go to state 13
    MINUS           shift and go to state 16
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 10
    EQUALITY        shift and go to state 11
    NON_EQUALITY    shift and go to state 15
    OR              shift and go to state 12
    AND             shift and go to state 17

  ! PLUS            [ reduce using rule 15 (expression -> expression OR expression .) ]
  ! MINUS           [ reduce using rule 15 (expression -> expression OR expression .) ]
  ! TIMES           [ reduce using rule 15 (expression -> expression OR expression .) ]
  ! DIVIDE          [ reduce using rule 15 (expression -> expression OR expression .) ]
  ! EQUALITY        [ reduce using rule 15 (expression -> expression OR expression .) ]
  ! NON_EQUALITY    [ reduce using rule 15 (expression -> expression OR expression .) ]
  ! OR              [ reduce using rule 15 (expression -> expression OR expression .) ]
  ! AND             [ reduce using rule 15 (expression -> expression OR expression .) ]


state 28

    (9) expression -> expression PLUS expression .
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . EQUALITY expression
    (14) expression -> expression . NON_EQUALITY expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . AND expression

    PLUS            reduce using rule 9 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 9 (expression -> expression PLUS expression .)
    EQUALITY        reduce using rule 9 (expression -> expression PLUS expression .)
    NON_EQUALITY    reduce using rule 9 (expression -> expression PLUS expression .)
    OR              reduce using rule 9 (expression -> expression PLUS expression .)
    AND             reduce using rule 9 (expression -> expression PLUS expression .)
    SEMICOLON       reduce using rule 9 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 9 (expression -> expression PLUS expression .)
    LACCO           reduce using rule 9 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 10

  ! TIMES           [ reduce using rule 9 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 9 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 13 ]
  ! MINUS           [ shift and go to state 16 ]
  ! EQUALITY        [ shift and go to state 11 ]
  ! NON_EQUALITY    [ shift and go to state 15 ]
  ! OR              [ shift and go to state 12 ]
  ! AND             [ shift and go to state 17 ]


state 29

    (11) expression -> expression TIMES expression .
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . EQUALITY expression
    (14) expression -> expression . NON_EQUALITY expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . AND expression

    PLUS            reduce using rule 11 (expression -> expression TIMES expression .)
    MINUS           reduce using rule 11 (expression -> expression TIMES expression .)
    TIMES           reduce using rule 11 (expression -> expression TIMES expression .)
    DIVIDE          reduce using rule 11 (expression -> expression TIMES expression .)
    EQUALITY        reduce using rule 11 (expression -> expression TIMES expression .)
    NON_EQUALITY    reduce using rule 11 (expression -> expression TIMES expression .)
    OR              reduce using rule 11 (expression -> expression TIMES expression .)
    AND             reduce using rule 11 (expression -> expression TIMES expression .)
    SEMICOLON       reduce using rule 11 (expression -> expression TIMES expression .)
    RPAREN          reduce using rule 11 (expression -> expression TIMES expression .)
    LACCO           reduce using rule 11 (expression -> expression TIMES expression .)

  ! PLUS            [ shift and go to state 13 ]
  ! MINUS           [ shift and go to state 16 ]
  ! TIMES           [ shift and go to state 14 ]
  ! DIVIDE          [ shift and go to state 10 ]
  ! EQUALITY        [ shift and go to state 11 ]
  ! NON_EQUALITY    [ shift and go to state 15 ]
  ! OR              [ shift and go to state 12 ]
  ! AND             [ shift and go to state 17 ]


state 30

    (14) expression -> expression NON_EQUALITY expression .
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . EQUALITY expression
    (14) expression -> expression . NON_EQUALITY expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . AND expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for EQUALITY resolved as shift
  ! shift/reduce conflict for NON_EQUALITY resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND resolved as shift
    SEMICOLON       reduce using rule 14 (expression -> expression NON_EQUALITY expression .)
    RPAREN          reduce using rule 14 (expression -> expression NON_EQUALITY expression .)
    LACCO           reduce using rule 14 (expression -> expression NON_EQUALITY expression .)
    PLUS            shift and go to state 13
    MINUS           shift and go to state 16
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 10
    EQUALITY        shift and go to state 11
    NON_EQUALITY    shift and go to state 15
    OR              shift and go to state 12
    AND             shift and go to state 17

  ! PLUS            [ reduce using rule 14 (expression -> expression NON_EQUALITY expression .) ]
  ! MINUS           [ reduce using rule 14 (expression -> expression NON_EQUALITY expression .) ]
  ! TIMES           [ reduce using rule 14 (expression -> expression NON_EQUALITY expression .) ]
  ! DIVIDE          [ reduce using rule 14 (expression -> expression NON_EQUALITY expression .) ]
  ! EQUALITY        [ reduce using rule 14 (expression -> expression NON_EQUALITY expression .) ]
  ! NON_EQUALITY    [ reduce using rule 14 (expression -> expression NON_EQUALITY expression .) ]
  ! OR              [ reduce using rule 14 (expression -> expression NON_EQUALITY expression .) ]
  ! AND             [ reduce using rule 14 (expression -> expression NON_EQUALITY expression .) ]


state 31

    (10) expression -> expression MINUS expression .
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . EQUALITY expression
    (14) expression -> expression . NON_EQUALITY expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . AND expression
